k8s/infra-base/monitoring/gatus/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: gatus
spec:
  selector:
    app: gatus
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
