k8s/infra-base/monitoring/gatus/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gatus.chenwx.top`)
      kind: Rule
      services:
        - name: gatus
          namespace: monitoring
          port: 80
